# SyncTailscaleCloudflareDNS

./: .gitignore  README.md  config.json.example  main.py  pyproject.toml  setup.py
ai_doc/: specification.md
src/: cloudflare.py  config.py  sync.py  tailscale.py  utils.py
tests/: test_cloudflare.py  test_config.py  test_sync.py  test_tailscale.py  test_tailscale_cli.py
