[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tailscale-cloudflare-sync"
version = "0.1.0"
description = "Syncs Tailscale devices to Cloudflare DNS."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[project.scripts]
ts-cf-sync = "sync:main"

[project.urls]
Repository = "https://github.com/yourusername/tailscale-cloudflare-sync"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I"]

[tool.ruff.isort]
known-first-party = ["src"]
